--- a/locale/en/LC_MESSAGES/openclaw/openclaw.po
+++ b/locale/en/LC_MESSAGES/openclaw/openclaw.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Olvid Bots 1.5.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-02-04 15:24+0100\n"
+"POT-Creation-Date: 2026-02-09 11:58+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -122,18 +122,18 @@ msgstr "For the **daemonUrl** parameter, use:"
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:80
-msgid "'http://localhost:50051' si OpenClaw tourne localement."
-msgstr "'http://localhost:50051' if OpenClaw is running locally."
+msgid "**http://localhost:50051** si OpenClaw tourne localement."
+msgstr "**http://localhost:50051** if OpenClaw is running locally."
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:81
-msgid "'http://daemon:50051' si OpenClaw et daemon tournent dans le même projet docker compose."
-msgstr "'http://daemon:50051' if OpenClaw and daemon are running in the same docker-compose project."
+msgid "**http://daemon:50051** si OpenClaw et daemon tournent dans le même projet docker compose."
+msgstr "**http://daemon:50051** if OpenClaw and daemon are running in the same Docker Compose project."
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:83
-msgid "Pour le paramètre **clientKey** utilisez la clé client qu'on vous a communiqué lors de l'installation, ou le résultat de la commande suivnte:"
-msgstr "For the parameter **clientKey**, use the client key that was provided to you during installation, or the result of the following command:"
+msgid "Pour le paramètre **clientKey** utilisez la clé client qu'on vous a communiqué lors de l'installation, ou le résultat de la commande suivante:"
+msgstr "For the **clientKey** parameter, use the client key that was provided to you during installation, or the result of the following command:"
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:88
@@ -152,18 +152,18 @@ msgstr "Section under construction"
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:95
-msgid "OpenClaw dans Docker"
-msgstr "OpenClaw in Docker"
+msgid "OpenClaw dans Docker: [](https://docs.openclaw.ai/install/docker)"
+msgstr "OpenClaw in Docker: [](https://docs.openclaw.ai/install/docker)"
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:96
-msgid "Mise en place d'Ollama"
-msgstr "Setting up Ollama"
+msgid "Mise en place d'Ollama: [](https://docs.ollama.com/integrations/openclaw#quick-setup)"
+msgstr "Setting up Ollama: [](https://docs.ollama.com/integrations/openclaw#quick-setup)"
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:97
-msgid "Installation du channel Olvid"
-msgstr "Installation of the Olvid channel"
+msgid "Installation du channel Olvid: [](https://doc.bot.olvid.io/openclaw)"
+msgstr "Installation of the Olvid channel: [ ](https://doc.bot.olvid.io/openclaw)"
 
 # translated using ollama
 #: ../../source/openclaw/openclaw.md:98
